backend/kubernetes/backend-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: backend
    name: backend
  name: backend
spec:
  replicas: 2
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
        name: backend
    spec:
      containers:
      - name: backend
        image: backend:latest
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
