backend/kubernetes/backend.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    app: backend
spec:
  rules:
    - http:
        paths:
          - path: /backend
            backend:
              serviceName: backend
              servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: backend
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: backend
    name: backend
  name: backend
spec:
  replicas: 2
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend
        name: backend
    spec:
      containers:
      - name: backend
        image: backend:latest
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
